pom文件依赖调整、增加自定义异常Assert代码try catch

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>sparkle-consumer</module>
         <module>sparkle-gateway</module>
         <module>sparkle-dependencies</module>
+        <module>sparkle-common</module>
     </modules>
     <artifactId>sparkle</artifactId>
     <version>1.0.0-SNAPSHOT</version>
