--- a/sparkle-provider/pom.xml
+++ b/sparkle-provider/pom.xml
@@ -9,15 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sprakle-service</artifactId>
+    <artifactId>sparkle-service</artifactId>
 
     <dependencies>
-
-        <!--<dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        </dependency>-->
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
