--- a/sparkle-common/pom.xml
+++ b/sparkle-common/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <artifactId>sparkle-common</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <build>
         <pluginManagement>
