--- a/sparkle-common/pom.xml
+++ b/sparkle-common/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <artifactId>sparkle-common</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
