--- a/sparkle-dependencies/pom.xml
+++ b/sparkle-dependencies/pom.xml
@@ -16,6 +16,8 @@
         <spring-boot-dependencies.version>2.0.4.RELEASE</spring-boot-dependencies.version>
         <spring-cloud-dependencies.version>Finchley.RELEASE</spring-cloud-dependencies.version>
         <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <maven-compiler.version>3.3</maven-compiler.version>
         <logback.version>1.2.3</logback.version>
         <sl4j.version>1.7.30</sl4j.version>
@@ -27,6 +29,7 @@
         <hutools.version>5.3.5</hutools.version>
         <slf4j.version>1.7.25</slf4j.version>
         <fastjson.version>1.2.47</fastjson.version>
+        <nacos.cloud.version>0.2.2.RELEASE</nacos.cloud.version>
     </properties>
 
 
@@ -49,12 +52,12 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-                <version>0.2.2.RELEASE</version>
+                <version>${nacos.cloud.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-                <version>0.2.1.RELEASE</version>
+                <version>${nacos.cloud.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba.nacos</groupId>
@@ -102,7 +105,20 @@
                 <version>${logback.version}</version>
             </dependency>
         </dependencies>
-
     </dependencyManagement>
 
+    <repositories>
+        <repository>
+            <id>aliyun-repos</id>
+            <url>https://maven.aliyun.com/repository/central</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>maven-releases</id>
+            <name>maven-releases-repository</name>
+            <url>http://101.200.80.154:8081/repository/maven-releases/</url>
+        </repository>
+    </repositories>
 </project>
