--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>sparkle-gateway</module>
         <module>sparkle-dependencies</module>
         <module>sparkle-common</module>
+        <module>sparkle-authorization</module>
     </modules>
     <artifactId>sparkle</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -37,6 +38,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.1</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
