--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>sparkle-dependencies</module>
         <module>sparkle-common</module>
         <module>sparkle-authorization</module>
+        <module>mq-exercise</module>
     </modules>
     <artifactId>sparkle</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -46,8 +47,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
