--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
         <module>sparkle-dependencies</module>
         <module>sparkle-common</module>
         <module>sparkle-authorization</module>
-        <module>mq-exercise</module>
     </modules>
     <artifactId>sparkle</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -55,6 +54,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -64,6 +64,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot-dependencies.version}</version>
                 <executions>
                     <execution>
                         <goals>
