fix:注册中心替换为eureka

--- a/sparkle-gateway/src/main/resources/application-dev.yml
+++ b/sparkle-gateway/src/main/resources/application-dev.yml
@@ -3,6 +3,9 @@ spring:
     nacos:
       discovery:
         server-addr: 198.148.123.187:8848
+    gateway:
+      httpclient:
+        connect-timeout:
 #      config:
 #        server-addr: 181.214.88.183:8848
 #        file-extension: yml
