--- a/sparkle-provider/src/main/resources/application-dev.yml
+++ b/sparkle-provider/src/main/resources/application-dev.yml
@@ -1,8 +1,4 @@
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 198.148.123.187:8848
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
@@ -12,4 +8,4 @@ spring:
 #        server-addr: 198.148.123.187:8848
 #        file-extension: yml
 server:
-  port: 8001
+  port: ${random.int(10000)}
