--- a/sparkle-gateway/src/main/resources/application-dev.yml
+++ b/sparkle-gateway/src/main/resources/application-dev.yml
@@ -1,13 +1,6 @@
-spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 198.148.123.187:8848
-    gateway:
-      httpclient:
-        connect-timeout:
-#      config:
-#        server-addr: 181.214.88.183:8848
-#        file-extension: yml
 server:
-  port: 8002
+  port: ${random.int(10000)}
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
