--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,9 @@
         <module>sparkle-gateway</module>
         <module>sparkle-dependencies</module>
         <module>sparkle-common</module>
-        <module>sparkle-authorization</module>
         <module>sparkle-register</module>
     </modules>
-    <artifactId>sparkle</artifactId>
+    <artifactId>sparkle-cloud</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
@@ -40,6 +39,10 @@
             <artifactId>commons-lang3</artifactId>
             <scope>compile</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
