fix:日志级别调整

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <module>sparkle-dependencies</module>
         <module>sparkle-common</module>
         <module>sparkle-register</module>
+        <module>sparkle-authorization</module>
+        <module>sparkle-auth</module>
+        <module>sparkle-generator</module>
     </modules>
     <artifactId>sparkle</artifactId>
     <version>1.0.0-SNAPSHOT</version>
