--- a/sparkle-user-mgt/sparkle-user/pom.xml
+++ b/sparkle-user-mgt/sparkle-user/pom.xml
@@ -3,29 +3,27 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>sparkle-parents</artifactId>
+        <artifactId>sparkle-user-mgt</artifactId>
         <groupId>com.sparkle.cloud</groupId>
         <version>${revision}</version>
-        <relativePath>../sparkle-parents</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sparkle-web</artifactId>
+    <artifactId>sparkle-user</artifactId>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.sparkle.cloud</groupId>
-            <artifactId>sparkle-service-api</artifactId>
-            <version>${revision}</version>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        </dependency>
     </dependencies>
-
 </project>
