--- a/sparkle-job/pom.xml
+++ b/sparkle-job/pom.xml
@@ -3,19 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>sparkle-parents</artifactId>
+        <artifactId>sparkle</artifactId>
         <groupId>com.sparkle.cloud</groupId>
-        <version>${revision}</version>
-        <relativePath>../sparkle-parents</relativePath>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sparkle-service-mgt</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>sparkle-service</module>
-        <module>sparkle-service-api</module>
-    </modules>
+    <artifactId>sparkle-job</artifactId>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
 </project>
