--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <dynamic.datasource.version>2.5.7</dynamic.datasource.version>
         <p6spy.version>3.8.1</p6spy.version>
         <springfox.version>3.0.0</springfox.version>
+        <mapstruct.version>1.4.2.Final</mapstruct.version>
     </properties>
 
     <dependencyManagement>
@@ -119,6 +120,16 @@
                 <artifactId>springfox-boot-starter</artifactId>
                 <version>${springfox.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.spring4all</groupId>
+                <artifactId>swagger-spring-boot-starter</artifactId>
+                <version>2.0.1.RELEASE</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -132,6 +143,10 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 
