--- a/sparkle-product-mgt/sparkle-product-api/pom.xml
+++ b/sparkle-product-mgt/sparkle-product-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>sparkle-product-mgt</artifactId>
         <groupId>com.sparkle.cloud</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
