--- a/sparkle-base-mgt/sparkle-base/src/main/resources/application.yml
+++ b/sparkle-base-mgt/sparkle-base/src/main/resources/application.yml
@@ -1,5 +1,14 @@
 spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 123456
+    url: jdbc:mysql://192.227.177.107:13306/finance_base?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2b8&useSSL=false
   application:
     name: sparkle-base
 server:
   port: 9099
+dubbo:
+  registry:
+    address: localhost:2181
+    protocol: zookeeper
