--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>sparkle-common</module>
         <module>sparkle-base-mgt</module>
         <module>sparkle-product-mgt</module>
+        <module>sparkle-web</module>
     </modules>
 
     <properties>
@@ -23,7 +24,7 @@
         <java.version>1.8</java.version>
         <spring-cloud-alibaba-dependencies.version>2.2.5.RELEASE</spring-cloud-alibaba-dependencies.version>
         <spring-boot-dependencies.version>2.3.9.RELEASE</spring-boot-dependencies.version>
-        <spring-cloud-dependencies.version>Hoxton.SR10</spring-cloud-dependencies.version>
+        <spring-cloud-dependencies.version>Greenwich.SR2</spring-cloud-dependencies.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven-compiler.version>3.3</maven-compiler.version>
@@ -48,6 +49,7 @@
         <springfox.version>3.0.0</springfox.version>
         <dubbo.version>2.7.14</dubbo.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
+        <dubbo.version>2.7.3</dubbo.version>
     </properties>
 
     <dependencyManagement>
@@ -56,6 +58,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring-boot-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -99,6 +108,11 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
                 <version>${mapstruct.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>${dubbo.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
