--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>sparkle-base-mgt</module>
         <module>sparkle-product-mgt</module>
         <module>sparkle-web</module>
+        <module>sparkle-gateway</module>
     </modules>
 
     <properties>
@@ -23,14 +24,13 @@
         <main.basedir>${basedir}</main.basedir>
         <java.version>1.8</java.version>
         <spring-cloud-alibaba-dependencies.version>2.2.5.RELEASE</spring-cloud-alibaba-dependencies.version>
-        <spring-boot-dependencies.version>2.3.9.RELEASE</spring-boot-dependencies.version>
-        <spring-cloud-dependencies.version>Greenwich.SR2</spring-cloud-dependencies.version>
+        <spring-boot-dependencies.version>2.3.2.RELEASE</spring-boot-dependencies.version>
+        <spring-cloud-dependencies.version>Hoxton.SR8</spring-cloud-dependencies.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven-compiler.version>3.3</maven-compiler.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
-        <flatten-maven-plugin.version>1.0.1</flatten-maven-plugin.version>
         <logback.version>1.2.3</logback.version>
         <sl4j.version>1.7.30</sl4j.version>
         <servlet-api.version>3.1.0</servlet-api.version>
@@ -47,9 +47,7 @@
         <dynamic.datasource.version>2.5.7</dynamic.datasource.version>
         <p6spy.version>3.8.1</p6spy.version>
         <springfox.version>3.0.0</springfox.version>
-        <dubbo.version>2.7.14</dubbo.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
-        <dubbo.version>2.7.3</dubbo.version>
     </properties>
 
     <dependencyManagement>
@@ -69,9 +67,11 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo-spring-boot-starter</artifactId>
-                <version>${dubbo.version}</version>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -108,11 +108,6 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
                 <version>${mapstruct.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo-spring-boot-starter</artifactId>
-                <version>${dubbo.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
