--- a/sparkle-web/src/main/resources/bootstrap.yml
+++ b/sparkle-web/src/main/resources/bootstrap.yml
@@ -6,4 +6,11 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         namespace: 29fb1eaf-8626-4ad0-952c-bb7a2ef9a572
+        prefix: ${spring.application.name}-${spring.profiles.active}
         file-extension: yaml
+  application:
+    name: sparkle-web
+  profiles:
+    active: dev
+server:
+  port: 8092
