--- a/sparkle-adm/pom.xml
+++ b/sparkle-adm/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.sparkle.cloud</groupId>
             <artifactId>sparkle-merchant-api</artifactId>
             <version>${version}</version>
@@ -47,6 +51,11 @@
             <groupId>com.sparkle.cloud</groupId>
             <artifactId>sparkle-user-api</artifactId>
             <version>${version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
         </dependency>
     </dependencies>
 </project>
