--- a/sparkle-user-mgt/sparkle-user/pom.xml
+++ b/sparkle-user-mgt/sparkle-user/pom.xml
@@ -27,16 +27,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.sparkle.cloud</groupId>
-            <artifactId>sparkle-product-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sparkle.cloud</groupId>
-            <artifactId>sparkle-base-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
         </dependency>
@@ -52,6 +42,18 @@
             <groupId>com.sparkle.cloud</groupId>
             <artifactId>sparkle-user-api</artifactId>
             <version>${version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
 </project>
