--- a/sparkle-adm/pom.xml
+++ b/sparkle-adm/pom.xml
@@ -9,6 +9,7 @@
         <version>${revision}</version>
     </parent>
 
+    <groupId>com.sparkle.adm</groupId>
     <artifactId>sparkle-adm</artifactId>
 
     <properties>
@@ -39,23 +40,19 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>com.sparkle.cloud</groupId>
+            <artifactId>sparkle-common</artifactId>
+            <version>${version}</version>
         </dependency>
         <dependency>
-            <groupId>com.sparkle.cloud</groupId>
-            <artifactId>sparkle-merchant-api</artifactId>
-            <version>${version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>com.sparkle.cloud</groupId>
             <artifactId>sparkle-user-api</artifactId>
             <version>${version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-        </dependency>
     </dependencies>
+
 </project>
