--- a/sparkle-web/src/main/resources/bootstrap.yml
+++ b/sparkle-web/src/main/resources/bootstrap.yml
@@ -3,6 +3,7 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+        namespace: 29fb1eaf-8626-4ad0-952c-bb7a2ef9a572
       config:
         server-addr: 127.0.0.1:8848
         namespace: 29fb1eaf-8626-4ad0-952c-bb7a2ef9a572
@@ -12,5 +13,3 @@ spring:
     name: sparkle-web
   profiles:
     active: dev
-server:
-  port: 8092
