--- a/sparkle-bill-mgt/sparkle-bill/pom.xml
+++ b/sparkle-bill-mgt/sparkle-bill/pom.xml
@@ -49,6 +49,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.sparkle.cloud</groupId>
+            <artifactId>sparkle-bill-api</artifactId>
+            <version>${version}</version>
+        </dependency>
     </dependencies>
 
 </project>
